--- a/css/friend.css
+++ b/css/friend.css
@@ -62,3 +62,13 @@
 .friend__now-listening i {
     font-size: 12px;
 }
+
+.friend__add-btn {
+    display: flex;
+    padding: 10px 15px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    background-color: #f5f5f5;
+
+}
