--- a/css/chat.css
+++ b/css/chat.css
@@ -72,8 +72,9 @@
 
 .message {
     display: flex;
-    align-items: center;
-    widows: 50%;
+    align-items: flex-start;
+    width: 50%;
+    margin-bottom: 20px;
     /* background-color: red; */
 }
 
@@ -92,7 +93,7 @@
 .incoming-message img {
     width: 30px;
     border-radius: 15px;
-    margin-right: 20px;
+    margin-right: 15px;
 }
 
 .message .message__bubble {
@@ -100,5 +101,20 @@
     box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
         0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
     padding: 10px 20px;
-    border-radius: 30px;
+    border-radius: 20px;
+}
+
+.incoming-message .message__author {
+    margin-top: 10px;
+    display: block;
+    font-weight: 600;
+    font-size: 12px;
+}
+
+.incoming-message .message__bubble {
+    border-bottom-left-radius: 0px;
+}
+
+.sent-message .message__bubble {
+    border-bottom-right-radius: 0px;
 }
