--- a/css/chat.css
+++ b/css/chat.css
@@ -102,10 +102,12 @@
         0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
     padding: 10px 20px;
     border-radius: 20px;
+    color: white;
+    font-weight: 600;
 }
 
 .incoming-message .message__author {
-    margin-top: 10px;
+    margin-top: 25px;
     display: block;
     font-weight: 600;
     font-size: 12px;
@@ -113,8 +115,11 @@
 
 .incoming-message .message__bubble {
     border-bottom-left-radius: 0px;
+
+    background-image: linear-gradient(to right, #7b4397, #dc2430)
 }
 
 .sent-message .message__bubble {
     border-bottom-right-radius: 0px;
+    background-image: linear-gradient(to left, #00c6ff, #0072ff)
 }
