--- a/css/chat.css
+++ b/css/chat.css
@@ -1,15 +1,28 @@
-.chats-body {
-    padding: 0;
+.header-wrapper {
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    background-color: white;
+    padding: 5px 0px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 8px 16px -8px,
+        rgba(0, 0, 0, 0.024) 0px -6px 16px -6px;
 }
+
+.chats-body {
+    padding: 10px 0px;
+    padding-top: 100px;
+
+}
+
 
 .chats-body .header,
 .chats-body .status-bar {
     padding: 0px 20px;
 }
 
-.chat-screen {
+.chats-body {
     background-image: url(../images/chatBg.png);
-    min-height: 100vh;
+    min-height: 1000vh;
 }
 
 .chat__write {
