--- a/css/chat.css
+++ b/css/chat.css
@@ -25,10 +25,11 @@
     min-height: 1000vh;
 }
 
-.chat__write {
+.chat__write--container {
     position: fixed;
-    bottom: 50px;
-    width: 80%;
+
+    bottom: 0px;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -37,8 +38,42 @@
     right: 0;
     background-color: #fcfcfc;
     padding: 0px 20px;
-    border-radius: 40px;
-    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2);
+
+    /* box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2); */
+}
+
+.chat__write {
+    bottom: 0px;
+    width: 100%;
+    border-radius: 0;
+
+    padding: 20px 60px;
+    width: 100%;
+    border: none;
+    font-size: 14px;
+}
+
+.chat__icon-left {
+    position: absolute;
+}
+
+.chat__icon-right {
+    position: absolute;
+    right: 10px;
+}
+
+.chat__write:focus {
+    outline: none;
+}
+
+.chat__icon {
+    font-size: 18px;
+    transition: opacity .3s ease-in-out;
+}
+
+.chat__write:focus~.chat__icon {
+    /* display: none; */
+    opacity: 0;
 }
 
 .chat__write i {
@@ -50,16 +85,7 @@
 
 }
 
-.chat__write-column input {
-    padding: 20px 10px;
-    width: 100%;
-    border: none;
-    font-size: 14px;
-}
 
-.chat__write-column input:focus {
-    outline: none;
-}
 
 .chat-screen .chat__messages {
     border-top: 1px solid #f7f7f7;
