--- a/css/chat.css
+++ b/css/chat.css
@@ -36,25 +36,19 @@
     margin: 0 auto;
     left: 0;
     right: 0;
-    background-color: #fcfcfc;
-    padding: 0px 20px;
-
+    /* background-color: #fcfcfc; */
+    /* padding: 0px 20px;
+     */
+    width: 100%;
     /* box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2); */
 }
 
-.chat__write {
-    bottom: 0px;
-    width: 100%;
-    border-radius: 0;
 
-    padding: 20px 60px;
-    width: 100%;
-    border: none;
-    font-size: 14px;
-}
 
 .chat__icon-left {
+
     position: absolute;
+    left: 10px;
 }
 
 .chat__icon-right {
@@ -62,8 +56,30 @@
     right: 10px;
 }
 
+.chat__write {
+    bottom: 0px;
+    width: 100%;
+    border-radius: 0;
+    margin: 0 auto;
+
+    padding: 20px 60px;
+    width: 100%;
+    border: none;
+    font-size: 14px;
+    transition: width 0.5s ease-in-out,
+        border-radius 0.5s ease-in-out,
+        transform 0.5s ease-in-out;
+}
+
 .chat__write:focus {
     outline: none;
+    width: 80%;
+
+    transform: translateY(-100px);
+    border-radius: 40px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 8px 16px -8px,
+        rgba(0, 0, 0, 0.024) 0px -6px 16px -6px;
+
 }
 
 .chat__icon {
