--- a/css/mobile.css
+++ b/css/mobile.css
@@ -18,8 +18,8 @@
     z-index: 4;
 }
 
-/* @media screen and (min-width:600px) {
+@media screen and (min-width:700px) {
     .bigScreen {
         display: flex;
     }
-} */
+}
